# redirox-pypi

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-upload.yaml
redirox/: __init__.py  client.py
