[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "redirox"
version = "0.1.0"
description = "Official Python SDK for Redirox URL shortener"
readme = "README.md"
authors = [
    { name = "Kishore" }
]
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "requests"
]

keywords = [
    "url-shortener",
    "redirox",
    "shortener",
    "qr-code"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://redirox.vercel.app"
Repository = "https://github.com/MKishoreDev/redirox-sdk"
